# ct_icp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  ct_icp_build.sh  default_config.yaml  env.sh  readme.md  steam_icp_build.sh
ros2/ct_icp_slam/: CMakeLists.txt  package.xml
ros2/ct_icp_slam/config/: aeva_config.yaml  aeva_elastic_config.yaml  aeva_gn_config.yaml  aeva_steam_config.yaml  boreas_config.yaml  default_config.yaml  dicp_elastic_config.yaml  dicp_steam_config.yaml  kitti_360_elastic_config.yaml  kitti_360_steam_config.yaml  kitti_raw_elastic_config.yaml  kitti_raw_steam_config.yaml  velodyne_elastic_config.yaml  velodyne_steam_config.yaml
ros2/ct_icp_slam/rviz/: slam.rviz
ros2/ct_icp_slam/script/: calibrate_velodyne.py  command.sh  generate_boreas_odometry_result.py  plot_boreas_poses_rviz.py  velocity_error.ipynb
ros2/ct_icp_slam/src/: slam.cpp
src/: CMakeLists.txt  slam.cpp
src/binding/: CMakeLists.txt
src/binding/pyct_icp/: pyct_icp.cpp
src/ct_icp/: CMakeLists.txt  Config.cmake.in  ct_icp.cpp  ct_icp.hpp  dataset.hpp  odometry.cpp
src/ct_icp/include/: ct_icp.hpp  dataset.hpp  evaluate_slam.hpp  odometry.hpp  types.hpp
src/ct_icp/include/Utilities/: stopwatch.hpp
src/ct_icp/src/: ct_icp.cpp  dataset.cpp  evaluate_slam.cpp  odometry.cpp
src/ct_icp/src/Utilities/: File.cpp  PersoTimer.cpp  PlyFile.cpp
steam_icp/: CMakeLists.txt
steam_icp/config/: aeva_elastic_config.yaml  aeva_spline_config.yaml  aeva_steam_config.yaml  dicp_elastic_config.yaml  dicp_steam_config.yaml  kitti_360_steam_config.yaml  kitti_raw_steam_config.yaml  velodyne_steam_config.yaml
steam_icp/include/steam_icp/: dataset.hpp  odometry.hpp  point.hpp  trajectory.hpp
steam_icp/include/steam_icp/datasets/: boreas_aeva.hpp  boreas_velodyne.hpp  dicp.hpp  kitti_360.hpp  kitti_raw.hpp  utils.hpp
steam_icp/include/steam_icp/odometry/: elastic_icp.hpp  spline_icp.hpp  steam_icp.hpp  steam_icp2.hpp
steam_icp/include/steam_icp/utils/: file.h  ply_file.h
steam_icp/rviz/: steam_icp.rviz
steam_icp/script/: calibrate_aeva.ipynb  command.sh  debug_aeva.ipynb  debug_steam.ipynb  plot_aeva_poses.ipynb  plot_dicp_poses.ipynb  plot_kitti_360_poses.ipynb  plot_kitti_raw_poses.ipynb  utils.py
steam_icp/src/: main.cpp
steam_icp/src/datasets/: boreas_aeva.cpp  boreas_velodyne.cpp  dicp.cpp  kitti_360.cpp  kitti_raw.cpp  utils.cpp
steam_icp/src/odometry/: elastic_icp.cpp  spline_icp.cpp  steam_icp.cpp  steam_icp2.cpp
steam_icp/src/utils/: ply_file.cpp
